fix(_bar.scss): adjust position for packs bar on small screens

--- a/apps/website/app/scss/components/_bar.scss
+++ b/apps/website/app/scss/components/_bar.scss
@@ -248,6 +248,10 @@
     background-color: white;
     z-index: 3;
 
+    @include screen-small {
+      position: relative;
+    }
+
     &__container {
       @extend .container;
       padding: 15px;
